thirdparty/boost/libs/date_time/test/posix_time/compile_fail/.uuid
13db60c6-b0a9-4385-8d7f-89d85fea9faf